test_suite/tests/ui/string/derive/invalid_char.stderr
error: expected identifier
 --> tests/ui/string/derive/invalid_char.rs:5:19
  |
5 |     derive(Debug, !),
  |                   ^
